# auth-service

./: .env.example  Cargo.toml  Makefile
bruno/auth_service/: Health Check.bru  Register.bru  Verify.bru
config/: dev.yaml
migrations/: 20250409051429_create_init_table.sql  20250416083103_init_table.down.sql  20250416083103_init_table.up.sql
src/: app_state.rs  config.rs  main.rs
src/error/: api.rs  authentication.rs  email.rs  mod.rs  user.rs
src/extractors/: mod.rs  payload_json.rs
src/handlers/: authentication.rs  health.rs  mod.rs
src/models/: activation_token.rs  authenticate.rs  claims.rs  mod.rs  request.rs  response.rs  user.rs
src/routes/: authentication.rs  error.rs  health.rs  mod.rs
src/services/: authentication.rs  email.rs  mod.rs  traits.rs  users.rs
src/utils/: security.rs
