[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = "0.10.1"
axum-test = "17.3.0"
config = "0.15.11"
dotenv = "0.15.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
